force-app/main/default/objects/Module_Task__c/Module_Task__c.object-meta.xml
<CustomObject>
    <label>Adventure Task</label>
    <nameField>
        <label>Adventure Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adventure Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>