force-app/main/default/objects/Module_Task__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>The order in which to display the Module Task</description>
    <label>Order</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>