force-app/main/default/objects/Module_Task__c/fields/Order_Step__c.field-meta.xml
<CustomField>
    <fullName>Order_Step__c</fullName>
    <formula>Step_Module__r.Adventure_Step__r.Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order (Step)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>