force-app/main/default/objects/Module_Task__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Adventure_Step_Module_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>