force-app/main/default/objects/Module_Task__c/fields/Question_Response__c.field-meta.xml
<CustomField>
    <fullName>Question_Response__c</fullName>
    <label>Question Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>