force-app/main/default/objects/Module_Task__c/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <description>The type of resource this Module Task offers</description>
    <inlineHelpText>The type of resource this Module Task offers</inlineHelpText>
    <label>Resource Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>question_answer</fullName>
                <label>FAQ</label>
            </value>
            <value>
                <fullName>File</fullName>
            </value>
            <value>
                <fullName>Knowledge Base</fullName>
            </value>
            <value>
                <fullName>podcast_webinar</fullName>
                <label>Podcast/Webinar</label>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
                <label>Salesforce.com</label>
            </value>
            <value>
                <fullName>Trailhead</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>