force-app/main/default/objects/Module_Task__c/fields/Step_Module__c.field-meta.xml
<CustomField>
    <fullName>Step_Module__c</fullName>
    <description>The Step Module that contains this Module Task</description>
    <inlineHelpText>The Step Module that contains this Module Task</inlineHelpText>
    <label>Step Module</label>
    <referenceTo>Step_Module__c</referenceTo>
    <relationshipName>Module_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>