force-app/main/default/objects/Module_Task__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The title of this Module Task to be displayed next to icon</description>
    <inlineHelpText>The title of this Module Task to be displayed next to icon</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>